--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@ body, html {height: 100%}
   <div class="w3-display-topleft w3-container w3-xlarge">
     <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black">product catalog</button></p>
     <p><button onclick="document.getElementById('menu2').style.display='block'" class="w3-button w3-black">product details</button></p>
-    <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black">discounted product</button></p>
-    <p><button onclick="document.getElementById('place an order').style.display='block'" class="w3-button w3-black">place an order</button></p>
-    <p><button onclick="document.getElementById('menu4').style.display='block'" class="w3-button w3-black">contact us</button></p>
+    <p><button onclick="document.getElementById('menu3').style.display='block'" class="w3-button w3-black">discounted product</button></p>
+    <p><button onclick="document.getElementById('menu4').style.display='block'" class="w3-button w3-black">place an order</button></p>
+    <p><button onclick="document.getElementById('menu5').style.display='block'" class="w3-button w3-black">contact us</button></p>
   </div>b
   <div class="w3-display-bottomleft w3-container">
     <p class="w3-xlarge">monday - friday 10-20 | saturday 14-23</p>
@@ -254,11 +254,11 @@ body, html {height: 100%}
 </div>
   
   
-  <!-- Menu Modal -->
-<div id="menu" class="w3-modal">
+  <!-- Menu3 Modal -->
+<div id="menu3" class="w3-modal">
   <div class="w3-modal-content w3-animate-zoom">
     <div class="w3-container w3-black w3-display-container">
-      <span onclick="document.getElementById('menu').style.display='none'" 
+      <span onclick="document.getElementById('menu3').style.display='none'" 
       class="w3-button w3-display-topright w3-large">x</span>
       
     </div>
@@ -315,11 +315,11 @@ body, html {height: 100%}
   
 
   
-   <!-- place an order Modal -->
-<div id="place an order" class="w3-modal">
+   <!-- Menu4 Modal -->
+<div id="menu4" class="w3-modal">
   <div class="w3-modal-content w3-animate-zoom">
     <div class="w3-container w3-black">
-      <span onclick="document.getElementById('place an order').style.display='none'" class="w3-button w3-display-topright w3-large">x</span>
+      <span onclick="document.getElementById('menu4').style.display='none'" class="w3-button w3-display-topright w3-large">x</span>
       <h1>Contact</h1>
     </div>
     <div class="w3-container">
@@ -335,11 +335,11 @@ body, html {height: 100%}
   </div>
 </div>
 
- <!-- Menu4 Modal -->
-<div id="menu4" class="w3-modal">
+ <!-- Menu5 Modal -->
+<div id="menu5" class="w3-modal">
   <div class="w3-modal-content w3-animate-zoom">
     <div class="w3-container w3-black w3-display-container">
-      <span onclick="document.getElementById('menu4').style.display='none'" 
+      <span onclick="document.getElementById('menu5').style.display='none'" 
       class="w3-button w3-display-topright w3-large">x</span>
       
     </div>
