--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ body, html {height: 100%}
     </div>
     <div class="w3-container">
       <center><img src="s1.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>s-1</b></h5> </center>
+      <center><h5>NO.<b>s-1</b></h5><br/><del>Price 300฿</del><br/><font color="Red"><b>SALE 150฿</b></font> </center>
       <center><img src="s2.jpg" style="width:50%"></center>
       <center><h5>NO.<b>s-2</b></h5> </center>
       <center><img src="s3.jpg" style="width:50%"></center>
