--- a/index.html
+++ b/index.html
@@ -270,25 +270,25 @@ body, html {height: 100%}
     </div>
     <div class="w3-container">
       <center><img src="s1.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>s-1</b></h5><del>Price 350฿</del><br/><font color="Red"><b>SALE 175฿</b></font> </center>
+      <center><h5>NO.<b>s-1</b></h5><del>Price 350฿</del><br/><font color="Red"><b>SALE 175฿</b></font></center>
       <center><img src="s2.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>s-2</b></h5><del>Price 300฿</del><br/><font color="Red"><b>SALE 150฿</b></font> </center>
+      <center><h5>NO.<b>s-2</b></h5><del>Price 300฿</del><br/><font color="Red"><b>SALE 150฿</b></font></center>
       <center><img src="s3.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>s-3</b></h5><del>Price 400฿</del><br/><font color="Red"><b>SALE 200฿</b></font> </center>
+      <center><h5>NO.<b>s-3</b></h5><del>Price 400฿</del><br/><font color="Red"><b>SALE 200฿</b></font></center>
       <center><img src="s4.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>s-4</b></h5><del>Price 200฿</del><br/><font color="Red"><b>SALE 100฿</b></font> </center>
+      <center><h5>NO.<b>s-4</b></h5><del>Price 200฿</del><br/><font color="Red"><b>SALE 100฿</b></font></center>
       <center><img src="s5.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>s-5</b></h5><del>Price 150฿</del><br/><font color="Red"><b>SALE 75฿</b></font> </center>
+      <center><h5>NO.<b>s-5</b></h5><del>Price 150฿</del><br/><font color="Red"><b>SALE 75฿</b></font></center>
       <center><img src="s6.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>s-6</b></h5><del>Price 250฿</del><br/><font color="Red"><b>SALE 125฿</b></font> </center>
+      <center><h5>NO.<b>s-6</b></h5><del>Price 250฿</del><br/><font color="Red"><b>SALE 125฿</b></font></center>
       <center><img src="s7.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>s-7</b></h5><del>Price 150฿</del><br/><font color="Red"><b>SALE 75฿</b></font> </center>
+      <center><h5>NO.<b>s-7</b></h5><del>Price 150฿</del><br/><font color="Red"><b>SALE 75฿</b></font></center>
       <center><img src="s8.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>s-8</b></h5><del>Price 300฿</del><br/><font color="Red"><b>SALE 150฿</b></font> </center>
+      <center><h5>NO.<b>s-8</b></h5><del>Price 300฿</del><br/><font color="Red"><b>SALE 150฿</b></font></center>
       <center><img src="s9.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>s-9</b></h5><del>Price 300฿</del><br/><font color="Red"><b>SALE 150฿</b></font> </center>
+      <center><h5>NO.<b>s-9</b></h5><del>Price 300฿</del><br/><font color="Red"><b>SALE 150฿</b></font></center>
       <center><img src="s10.jpg" style="width:50%"></center>
-      <center><h5>NO.<b>s-10</b></h5><del>Price 350฿</del><br/><font color="Red"><b>SALE 175฿</b></font> </center>
+      <center><h5>NO.<b>s-10</b></h5><del>Price 350฿</del><br/><font color="Red"><b>SALE 175฿</b></font></center>
     </div>
   </div>
 </div>
@@ -301,10 +301,10 @@ body, html {height: 100%}
   <div class="w3-modal-content w3-animate-zoom">
     <div class="w3-container w3-black">
       <span onclick="document.getElementById('menu4').style.display='none'" class="w3-button w3-display-topright w3-large">x</span>
-      <h1>สั่งซื้อ...</h1>
+      <h1>place an order</h1>
     </div>
     <div class="w3-container">
-      <p>Reserve a table, ask for today's special or just send us a message:</p>
+      <p>Order by completing the information:</p>
       <form action="/action_page.php" target="_blank">
         <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Name" required name="Name"></p>
         <p><input class="w3-input w3-padding-16 w3-border" type="number" placeholder="How many people" required name="People"></p>
@@ -314,6 +314,7 @@ body, html {height: 100%}
       </form>
     </div>
   </div>
+</div>
  
 
 
